--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 create and append them to the `gallery` div.
 
                 IMPORTANT: Altering the arrangememnt of the markup and the 
-                attributes used may break the styles or functionality.
+                attri butes used may break the styles or functionality.
 
                 <div class="card">
                     <div class="card-img-container">
@@ -94,8 +94,6 @@
                 </div>
             </div>
         ======================== -->
-
-        <!-- Add your JS here -->
-        
+        <script src='js/scripts.js'></script>
     </body>
 </html>
